--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,27 @@
-/*Nombre de la Pagina*/
 
-.brand-title {
-  color: #0a2a6a;
-  font-weight: bold;
+.btn-morado {
+    color: #8b5cf6;
+    border: 1px solid #8b5cf6;
+    font-weight: 500;
 }
 
-.login-icon {
-  color: #0a2a6a !important;
+.btn-morado:hover {
+    background-color: #8b5cf6;
+    color: #fff;
 }
 
+/* Boton Iniciar sesión */
+.btn-login {
+  background-color: #8b5cf6;     
+  color: white;
+  border: 2px solid #8b5cf6;
+  border-radius: 8px;
+  font-size: 1.05rem;
+  transition: .2s;
+}
 
-/*Icono de carrito*/
-.cart-icon {
-  color: #0a2a6a;
+.btn-login:hover {
+  background-color: white;
+  color: #8a45ff;
+  border: 2px solid #8a45ff;
 }
