--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,94 @@
   color: #8a45ff;
   border: 2px solid #8a45ff;
 }
+
+
+
+/* Carrusel */
+.banner-carousel {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  height: 350px;
+  background: white;
+  overflow: hidden;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+}
+
+.banner-slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 40px;
+  opacity: 0;
+  transition: opacity 0.8s ease;
+}
+
+.banner-slide.active {
+  opacity: 1;
+}
+
+.banner-text h1 {
+  font-size: 40px;
+  font-weight: bold;
+  color: #0b1558;
+}
+
+.banner-text p {
+  color: gray;
+  margin-top: 10px;
+}
+
+.banner-btn {
+  margin-top: 20px;
+  padding: 12px 25px;
+  background: #4b19f5;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.banner-img {
+  width: 45%;
+  height: auto;
+  object-fit: contain;
+}
+
+.banner-prev,
+.banner-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #00000040;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.banner-prev { left: 15px; }
+.banner-next { right: 15px; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
